--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     
 
     <!-- import css -->
-    <link rel="stylesheet" href="../css/program.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/modal.css">
+    <link rel="stylesheet" href="/css/program.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/modal.css">
 
 </head>
 
@@ -43,6 +43,6 @@
 </body>
 
 <!-- import javascript -->
-<script src="../js/program.js"></script>
+<script src="/js/program.js"></script>
 
 </html>
