--- a/login.html
+++ b/login.html
@@ -28,10 +28,10 @@
       </div>
   
       <div class="container">
-        <label for="uname"><b>Username</b></label>
+        <label for="username"><b>Username</b></label>
         <input type="text" placeholder="Enter Username" id="username" name="username" required>
   
-        <label for="psw"><b>Password</b></label>
+        <label for="password"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" id="password" name="password" required>
         
         <p style="color: red;" id="nameErrorMessage"></p>
