--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
 
-    <!-- import css -->
+    import css
     <link rel="stylesheet" href="./css/program.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/table.css">
@@ -28,6 +28,7 @@
 
 <body>
 
+    <h1>Demo</h1>
     <div class="header">
 
     </div>
