--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-<!-- 
     <link rel="stylesheet" href="./css/program.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/table.css">
-    <link rel="stylesheet" href="./css/modal.css"> -->
+    <link rel="stylesheet" href="./css/modal.css">
 
 </head>
 
@@ -43,6 +42,6 @@
 </body>
 
 <!-- import javascript -->
-<script src="/js/program.js"></script>
+<script src="./js/program.js"></script>
 
 </html>
