--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- import css -->
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
 
 </head>
 <body>
@@ -49,5 +49,5 @@
 </body>
 
 <!-- import javascript -->
-<script src="../js/login.js"></script>
+<script src="./js/login.js"></script>
 </html>
